--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "@studio-freight/lenis": "^1.0.13",
     "gsap": "^3.11.5",
     "react": "^18.2.0",
