--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@studio-freight/lenis": "^1.0.13",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
