--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@studio-freight/lenis": "^1.0.13",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
+    "framer-motion": "^11.2.13",
     "gsap": "^3.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
